--- a/conda.yml
+++ b/conda.yml
@@ -3,9 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - numpy<1.24
   - mlflow=1.14.1
   - pyyaml=5.3.1
   - hydra-core=1.0.6
   - pip=20.3.3
+  - protobuf=3.20.2
   - pip:
       - wandb==0.10.31
