--- a/src/data_check/conda.yml
+++ b/src/data_check/conda.yml
@@ -3,9 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pandas=1.1.4
+  - numpy<1.24
+  - pandas=1.2.3
   - pytest=6.2.2
   - scipy=1.5.2
   - pip=20.3.3
+  - protobuf=3.20.2
   - pip:
       - wandb==0.10.21
